--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,30 @@ PyAudio==0.2.13
 requests==2.28.2
 SpeechRecognition==3.9.0
 urllib3==1.26.14
+appdirs==1.4.4
+audioread==3.0.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+decorator==5.1.1
+idna==3.4
+joblib==1.2.0
+lazy_loader==0.1
+librosa==0.10.0
+llvmlite==0.39.1
+msgpack==1.0.4
+numba==0.56.4
+numpy==1.23.5
+packaging==23.0
+pooch==1.6.0
+PyAudio==0.2.13
+pycparser==2.21
+requests==2.28.2
+scikit-learn==1.2.1
+scipy==1.10.1
+soundfile==0.12.1
+soxr==0.3.3
+SpeechRecognition==3.9.0
+threadpoolctl==3.1.0
+typing_extensions==4.5.0
+urllib3==1.26.14
